# packserver

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
src/packserver/: __init__.py
